# lslpy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-unittests.yml
examples/: abs_property.py  bad_mult_verify.py  division_contract.py  example.py  higher_order_contract.py  list_index_contract.py  reverse_list_property.py  string_length_contract.py
lslpy/: __init__.py
lslpy/contracts/: __init__.py  aliases.py  base.py  derived.py  exceptions.py  primitives.py  util.py
lslpy/verification/: prover.py  transformer.py  util.py
tests/: test_decorator.py  type_hints.py
tests/contracts/: test_derived.py  test_primitives.py
tests/verification/: test_transformer.py
