[build-system]
requires = ["setuptools", "wheel", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "lslpy"
version = "0.0.1"
description = "A Python library for contracting and property-based testing in Python, inspired by LSL."
authors = ["Beck LaBash <labash.b@northeastern.edu>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"